<resources>
    <string name="app_name">Momokas</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="welcome">Welcome in, Momokas !</string>
    <string name="forgetpassword">ForgetPassword?</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_account">Dont Have an Account?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="text_cari">Cari</string>
    <string name="text_semua">Semua</string>
    <string name="text_mobil">Mobil</string>
    <string name="text_motor">Motor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="merk">Merk</string>
    <string name="tipe">Tipe</string>
    <string name="cc">CC</string>
    <string name="tahun">Tahun</string>
    <string name="jumlah_kilometer">Jumlah Kilometer</string>
    <string name="pajak">Pajak</string>
    <string name="kelengkapan">Kelengkapan</string>
    <string name="rp">Rp.</string>
    <string name="harga">Harga</string>
    <string name="kepemilikan">Kepemilikan</string>
    <string name="deskrpsi">Deskrpsi</string>
    <string name="simpan">Simpan</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="pilih_gambar">Pilih Gambar..</string>
    <string name="upload">Upload</string>
    <string name="batal">Batal</string>
    <string name="menyimpan_data">Menyimpan data..</string>
    <string name="gambar_sedang_diupload">Gambar sedang di-Upload</string>
    <string name="warna">Warna</string>
    <string name="batal_upload">Membatalkan upload</string>
    <string name="textContoh_manual">Manual</string>
    <string name="textContoh_10000km">10000Km</string>
    <string name="textContoh_hidup">Hidup</string>
    <string name="textContoh_harga">Rp000.000.000</string>
    <string name="textContoh_lokasi">Lokasi</string>
    <string name="textContoh_namauser">NamaUser</string>
    <string name="ganti">Ganti</string>
    <string name="transmisi">Transmisi</string>
    <string name="list_kendaraan">List Kendaraan</string>
    <string name="tipe_kendaraan">Tipe Kendaraan</string>
    <string name="merk_kendaraan">Merk Kendaraan</string>
    <string name="fotokendaraan">FotoKendaraan</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="valuewarna">: valueWarna</string>
    <string name="valuecc">: valueCC</string>
    <string name="valuetahun">: valueTahun</string>
    <string name="valuejkilometer">: valueJKilometer</string>
    <string name="valuepajak">: valuePajak</string>
    <string name="valuekelengkapan">: valueKelengkapan</string>
    <string name="valuekepemilikan">: valueKepemilikan</string>
    <string name="kontendeskripsi">kontenDeskripsi</string>
    <string name="harga_kendaraan">Harga Kendaraan</string>
    <string name="rp_150_000_000">Rp. 150.000.000</string>
    <string name="checkout">Checkout</string>
    <string name="belum_terjual">Belum Terjual</string>
    <string name="save">Save</string>
    <string name="daftar">Daftar</string>
    <string name="logo_aplikasi">logo_aplikasi</string>
    <string name="copyright">Copyright 2021 by Team ID: CSD-170</string>
    <string name="nama_user">Nama User</string>
    <string name="alamat_email_user">alamat@email</string>
    <string name="_0877_xxxx_phone">0877 XXXX Phone</string>
    <string name="address_jakarta">Address Jakarta</string>
    <string name="edit">Edit</string>
    <string name="_0_post">0 Post</string>
    <string name="logout">Logout</string>
    <string name="honda_pcx">Honda PCX</string>
    <string name="_2020">2020</string>
    <string name="text">Text</string>
    <string name="pilih_kendaraan">Pilih Kendaraan</string>
    <string name="floatingbuttonprofile">floatingButtonProfile</string>
    <string name="deskripsipostmobil">DeskripsiPostMobil</string>
    <string name="deskripsi_post_motor">Deskripsi Post Motor</string>
    <string name="rv_kendaraan">Rv Kendaraan</string>
    <string name="rv_slider">Rv Slider</string>
    <string name="beranda">Beranda</string>
</resources>