<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/abc_ic_ab_back_material"
                app:title="Detail Kendaraan">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/inputTipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tipe_kendaraan"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/inputMerk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/merk_kendaraan"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/inputTipe"
            app:layout_constraintTop_toBottomOf="@+id/inputTipe" />

        <androidx.cardview.widget.CardView
            android:id="@+id/tvPilihGambar"
            android:layout_width="0dp"
            android:layout_height="222dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/inputTipe"
            app:layout_constraintStart_toStartOf="@+id/inputTipe"
            app:layout_constraintTop_toBottomOf="@+id/inputMerk"
            app:riv_corner_radius="20dp">

            <ImageView
                android:id="@+id/imgKendaraan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/fotokendaraan"
                android:src="@drawable/img" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="8dp"
            app:contentPaddingLeft="15dp"
            app:contentPaddingRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPilihGambar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Spesifikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/spesifikasi"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Warna"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/warna"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputWarna"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Spesifikasi" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Cc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/cc"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputCC"
                    app:layout_constraintStart_toStartOf="@+id/tv_Warna"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Warna" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Tahun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/tahun"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputTahun"
                    app:layout_constraintStart_toStartOf="@+id/tv_Cc"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Cc" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Jumlahkilometer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/jumlah_kilometer"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputKilometer"
                    app:layout_constraintStart_toStartOf="@+id/tv_Tahun"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Tahun" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Pajak"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/pajak"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputPajak"
                    app:layout_constraintStart_toStartOf="@+id/tv_Jumlahkilometer"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Jumlahkilometer" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Kelengkapan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/kelengkapan"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputKelengkapan"
                    app:layout_constraintStart_toStartOf="@+id/tv_Pajak"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Pajak" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Kepemilikan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/kepemilikan"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_Deskripsi"
                    app:layout_constraintEnd_toStartOf="@+id/inputKepemilikan"
                    app:layout_constraintStart_toStartOf="@+id/tv_Kelengkapan"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Kelengkapan" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_Deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/deskripsi"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Kepemilikan" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputWarna"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/valuewarna"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_Warna"
                    app:layout_constraintTop_toTopOf="@+id/tv_Warna" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputCC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/valuecc"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_Cc"
                    app:layout_constraintTop_toTopOf="@+id/tv_Cc" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputTahun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/valuetahun"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_Tahun"
                    app:layout_constraintTop_toTopOf="@+id/tv_Tahun" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputKilometer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/valuejkilometer"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_Jumlahkilometer"
                    app:layout_constraintTop_toTopOf="@+id/tv_Jumlahkilometer" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputPajak"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/valuepajak"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_Pajak"
                    app:layout_constraintTop_toTopOf="@+id/tv_Pajak" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputKelengkapan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/valuekelengkapan"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_Kelengkapan"
                    app:layout_constraintTop_toTopOf="@+id/tv_Kelengkapan" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputKepemilikan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/valuekepemilikan"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_Kepemilikan"
                    app:layout_constraintTop_toTopOf="@+id/tv_Kepemilikan" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputDeskripsi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/kontendeskripsi"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_Deskripsi"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Deskripsi" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/harga_kendaraan"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_detail" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/inputHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/rp_150_000_000"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvHarga" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckoutPublic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:elevation="10dp"
            android:text="@string/checkout"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputHarga" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>