<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/backgroundMain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beranda"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_rv_slider"
        android:paddingTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSemuaView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/text_semua"
            android:textAllCaps="false"
            android:textColor="#6A6F72"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMobilView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_mobil"
            android:textAllCaps="false"
            android:textColor="#6A6F72"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMotorView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/text_motor"
            android:textAllCaps="false"
            android:textColor="#6A6F72"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="20dp"/></LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        tools:listitem="@layout/item_rv_kendaraan"
        android:layout_gravity="center_horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"/>
</LinearLayout>